# rcvr-app

./: .browserslistrc  .env  .env.production  .env.test  .eslintignore  .eslintrc.js  .gitignore  .prettierignore  .svgo.yml  README.md  babel.config.js  cypress.json  i18n.js  i18n.json  lint-staged.config.js  next-env.d.ts  next.config.js  now.json  package-lock.json  package.json  setup-tests.ts  setupTests.ts  tsconfig.json  vercel.json
.semaphore/: semaphore.yml
.storybook/: main.js  preview.js  tsconfig.json
__tests__/: checkin.test.tsx
config/: custom-jsdom-env.js  with-test-router.tsx
crypto-demo/: README.md
crypto/c++/: SaveFile.hxx  meson.build  seal.cxx
lib/: api.ts  appReset.css  config.ts  contentBasedOnEnv.tsx  crypto.ts  db.ts  error.ts  file.ts  password-strength.ts  phoneValidator.ts  polyfills.ts  px-to-rem.ts  supportedBrowsers.js  translate.ts
locales/: LocalesResources.d.ts  build.js  config.d.ts  config.defaults.d.ts  config.defaults.json  config.json  constants.ts  deCheckinPage.ts  deScanQRPage.ts  defaults.js  defaults.json  generate.js  i18n.ts  loadLocale.ts  loadPageLocale.ts  migrate.js  resources.ts  types.d.ts  useLocale.ts  useLocaleAsync.ts  useLocaleContext.ts  useLocaleObject.ts  usePageLocale.ts  write-json.ts
pages/: 404.de.ts  404.en.ts  404.locales.ts  404.pl.ts  404.tsx  _app.tsx  _error.de.ts  _error.en.ts  _error.locales.ts  _error.pl.ts  _error.tsx  checkin.de.ts  checkin.en.ts  checkin.locales.ts  checkin.pl.ts  checkin.tsx  corona.de.ts  corona.en.ts  corona.locales.ts  corona.pl.ts  corona.tsx  index.de.ts  (+15 more)
(+397 files in other folders)
